<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BiodataActivity"
    android:layout_margin="20dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        android:orientation="vertical">
        <TextView
        android:id="@+id/heading_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:gravity="center"
        android:fontFamily="@font/poppins_regular"
        android:textColor="#555358"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:id="@+id/biodata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading_title"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray"
                    android:text="@string/nim_title"/>
                <TextView
                    android:fontFamily="@font/poppins_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/nim"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/gray"
                    android:layout_marginTop="10dp"
                    android:text="@string/my_name_title"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/my_name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/gray"
                    android:layout_marginTop="10dp"
                    android:text="@string/pdob_title"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/pdob"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/gray"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginTop="10dp"
                    android:text="@string/life_motto_title"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/life_motto"/>

            </LinearLayout>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/my_photo"
                android:layout_width="1dp"
                android:layout_height="190dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#7B7263"
                android:layout_weight="1"
                android:src="@drawable/arsyi"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp">
        <Button
            android:layout_width="270dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/homepage_btn"
            android:onClick="toMainActivity"/>
        <Button
            android:textSize="16sp"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/article_btn"
            android:onClick="toArticleActivity"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>