<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_gravity="center"
        android:textSize="50sp"
        android:text="@string/welcome_message"
        android:fontFamily="@font/poppins_regular"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintTop_toBottomOf="@id/welcome_message"
            app:layout_constraintRight_toRightOf="@id/welcome_message"
            android:text="Task 2"/>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp">
        <Button
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:text="@string/article_btn"
            android:fontFamily="@font/poppins_regular"
            android:onClick="toArticleActivity"/>
        <Button
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/student_biodata_btn"
            android:onClick="toBiodataActivity"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>